add comments and fix errors in readme/config files

--- a/server.ini
+++ b/server.ini
@@ -1,7 +1,7 @@
 [ntske]
 port = 4460
-server_cert = certs/cert.pem
-server_key = certs/privkey.pem
+server_cert = serverCert.pem
+server_key = serverKey.pem
 
 [ntpv4]
 # server =
